# data-trace-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DVC_registry_agent_access_scatch.xml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  eval.yml
agent/: agent.py
agent/.adk/: session.db
agent/agents/: __init__.py  bigquery_agent.py  code_analysis_agent.py  data_analysis_agent.py  metadata_agent.py
agent/tools/: __init__.py  bigquery_tools.py  data_tools.py  git_tools.py  response_models.py
deployment/: config.py  deploy.py
deployment/scripts/: read_logs.sh  read_traces.sh  setup_gcp.sh  upload_secret.sh
prompts/: prompts.yaml
prompts/system/: base.md
prompts/tasks/: bigquery.md  code_analysis.md  data_analysis.md  metadata.md  root_agent.md
tests/evals/: promptfoo.yaml  provider.py
tests/unit/: conftest.py  test_agent_init.py  test_agent_module.py  test_config.py  test_response_models.py  test_tools.py
